attempt to stop zooming in on mobile

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -79,3 +79,9 @@
     }
   }
 }
+
+input[type='text'],
+input[type='number'],
+textarea {
+  font-size: 16px;
+}
